# basic_project_sturucture

./: CMakeLists.txt
include/printing/: printer.h
include/reading/: reader.h
include/showing/: shower.h
src/: main.cpp
src/printing/: CMakeLists.txt  printer.cpp
src/reading/: CMakeLists.txt  reader.cpp
src/showing/: CMakeLists.txt  shower.cpp
